# rivendell-c-api

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  get_target.sh  rivendell.pc.in  rivwebcapi.spec.in
docbook/: Makefile  Makefile.am  addcart.xml  addcut.xml  assignschedcode.xml  audioinfo.xml  audiostore.xml  clibsummary.xml  copyaudio.xml  deleteaudio.xml  editcart.xml  editcut.xml  export.xml  exportpeaks.xml  import.xml  listcart.xml  listcarts.xml  listcartschedcodes.xml  listcut.xml  listcuts.xml  listgroup.xml  listgroups.xml  listlog.xml  listlogs.xml  listschedcodes.xml  listservices.xml  rd_addcart.xml  rd_addcut.xml  rd_addlog.xml  rd_assignschedcode.xml  rd_audioinfo.xml  rd_audiostore.xml  rd_copyaudio.xml  rd_createticket.xml  rd_deleteaudio.xml  rd_deletelog.xml  rd_editcart.xml  rd_editcut.xml  rd_export.xml  rd_exportpeaks.xml  (+22 more)
lib/: Makefile.am  addcart.h  addcut.c  addcut.h  assignschedcode.h  audioinfo.h  audiostore.c  copyaudio.h  editcart.h  editcut.h  export.c  exportpeaks.c  exportpeaks.h  import.c  listcart.h  listcarts.h  listcartschedcodes.c  listcartschedcodes.h  listcut.h  listcuts.c  listcuts.h  listgroup.h  listgroups.c  listgroups.h  listlog.h  listlogs.c  listschedcodes.h  listservices.c  listservices.h  rdcart.h  rdgroup.h  removecart.h  removecut.c  trimaudio.c  unassignschedcode.c
rivendell/: Makefile.am  addcart.c  addcart.h  addcut.c  addcut.h  assignschedcode.c  audioinfo.c  audiostore.h  copyaudio.c  deleteaudio.c  deleteaudio.h  editcart.c  editcart.h  editcut.c  editcut.h  export.h  import.c  import.h  listcart.c  listcart.h  listcarts.c  listcarts.h  listcartschedcodes.h  listcut.c  listcut.h  listcuts.c  listcuts.h  listgroup.c  listgroup.h  listgroups.c  listgroups.h  listlog.c  listlogs.c  listlogs.h  listschedcodes.c  listschedcodes.h  rd_addcart.c  rd_addcart.h  rd_addcut.c  rd_addcut.h  (+75 more)
tests/: Makefile.am  addcart_test.c  addcut_test.c  addlog_test.c  assignschedcode_test.c  audioinfo_test.c  audiostore_test.c  copyaudio_test.c  createticket_test.c  deleteaudio_test.c  deletelog_test.c  editcart_test.c  editcut_test.c  exportcart_test.c  exportpeaks_test.c  getuseragent_test  getuseragent_test.c  getversion_test  getversion_test.c  importcart_test.c  listcart_test.c  listcarts_test.c  listcartschedcodes_test.c  listcut_test.c  listcuts_test.c  listgroup_test.c  listgroups_test.c  listlog_test.c  listlogs_test.c  listschedcodes_test.c  listservices_test.c  listsystemsettings_test.c  removecart_test.c  removecut_test.c  savelog_test.c  trimaudio_test.c  unassignschedcode_test.c
